--- a/p1/13css.html
+++ b/p1/13css.html
@@ -87,6 +87,50 @@
         .plates-menu td.table-subsection {
             text-align: center;
         }
+
+        @media (max-width: 768px) {
+            .page {
+                padding: 20px 16px 40px;
+            }
+
+            #salt-smoke {
+                font-size: 1.5 rem;
+                letter-spacing: 2px;
+            }
+
+            h2 {
+                font-size: 1.3rem;
+                margin-top: 32px;
+            }
+
+            h3 {
+                font-size: 1.1rem;
+            }
+
+            .map iframe {
+                width: 100%;
+                height: 300px;
+            }
+
+            .menu-list {
+                font-size: 0.9rem;
+            }
+
+            .menu-list th,
+            .menu-list td {
+                padding: 8px 4px;
+            }
+
+            @media (max-width: 480px) {
+                salad-menu thead th:not(:first-child) {
+                    font-size: 0.8rem;
+                }
+
+                .menu-list {
+                    font-size: 0.85rem;
+                }
+            }
+        }
     </style>
 </head>
 
