--- a/p1/12css.html
+++ b/p1/12css.html
@@ -12,6 +12,11 @@
             padding: 0;
             background-color: rgb(245, 242, 228);
         }
+        .container{
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
 
         #salt-smoke {
             margin: 0;
@@ -38,7 +43,7 @@
         }
 
         iframe {
-            width: 200;
+            width: 100%;
             height: 250px;
             border: 0;
         }
@@ -79,6 +84,12 @@
 
         .table-subsection {
             text-align: center;
+        }
+
+        @media(max-width: 768px) {
+            .map-grid {
+                grid-template-columns: 1fr;
+            }
         }
     </style>
 </head>
