--- a/p1/14css.html
+++ b/p1/14css.html
@@ -67,7 +67,7 @@
     </div>
     <div class="board">
         <section class="card" id="Where">
-            <h2>Where</h2>
+            <h2>Locations</h2>
             <a href="https://maps.app.goo.gl/pJxzcKdc8irB6GdLA">6525 Delmar Blvd., St. Louis, MO 63130</a><br>
             <a href="https://maps.app.goo.gl/2zwuGkdByZbkDaQh8">501 Clark Ave., St. Louis, MO 63102</a><br>
             <a href="https://maps.app.goo.gl/FGNx1tzytwagD8JP7">5625 Hampton Ave., St. Louis, M 63109</a><br>
@@ -77,7 +77,7 @@
             <a href="https://maps.app.goo.gl/hTSqYcGpafMi4mrq7">4130 Rusty Rd, St. Louis, MO 63128</a><br>
         </section>
         <section class="card" id="when">
-            <h2>When</h2>
+            <h2>Hours</h2>
             <p><b>Sun-Thu: 11am-9pm<br>Fri-Sat: 11am-10pm</b></p>
         </section>
 
@@ -149,7 +149,6 @@
                 (Sweet/Unsweet)
                 .......................... $2.99<br>Sam Pellegrino
                 ....................................................... $2.99</p>
-        </section>
         </section>
     </div>
 </body>
