--- a/p1/20css.html
+++ b/p1/20css.html
@@ -641,7 +641,7 @@
         </div>
     </section>
     <footer>
-        <p>&copy; 2026 Salt + Smoke. All rights reserved.</p>
+        <p>Salt + Smoke</p>
     </footer>
 </body>
 
